--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_core: ^2.7.0
   firebase_auth: ^4.2.9
   google_sign_in: ^6.0.2
+  injectable: ^2.1.0
+  get_it: ^7.2.0  
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +57,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner:
   freezed: ^2.3.2
+  injectable_generator: ^2.1.4
+  lint: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
